@@ -1,14 +1,17 @@
 from django.core.management.base import BaseCommand, CommandError
 from django.utils.translation import ugettext as _
 
+from dsmr_backend.mixins import InfiniteManagementCommandMixin
 from dsmr_datalogger.models.settings import DataloggerSettings
 import dsmr_datalogger.services
 
 
-class Command(BaseCommand):
+class Command(InfiniteManagementCommandMixin, BaseCommand):
     help = _('Performs an DSMR P1 telegram reading on the COM port.')
+    name = __name__  # Required for PID file.
 
-    def handle(self, **options):
+    def run(self, **options):
+        """ InfiniteManagementCommandMixin listens to handle() and calls run() in a loop. """
         datalogger_settings = DataloggerSettings.get_solo()
 
         # This should only by disabled when performing huge migrations.
