@@ -1,10 +1,13 @@
 [program:dsmr_backend]
 command=/usr/bin/nice -n 10 /home/dsmr/.virtualenvs/dsmrreader/bin/python3 /home/dsmr/dsmr-reader/manage.py dsmr_backend
+pidfile=/var/tmp/dsmrreader--%(program_name)s.pid
 user=dsmr
 group=dsmr
 autostart=true
 autorestart=true
 startsecs=1
+startretries=100
+stopwaitsecs=30
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor--%(program_name)s.log
 stdout_logfile_maxbytes=10MB
