@@ -1,11 +1,13 @@
 [program:dsmr_datalogger]
 command=/usr/bin/nice -n 5 /home/dsmr/.virtualenvs/dsmrreader/bin/python3 /home/dsmr/dsmr-reader/manage.py dsmr_datalogger
+pidfile=/var/tmp/dsmrreader--%(program_name)s.pid
 user=dsmr
 group=dsmr
 autostart=true
 autorestart=true
 startsecs=1
 startretries=100
+stopwaitsecs=15
 stdout_logfile=/var/log/supervisor--%(program_name)s.log
 stdout_logfile_maxbytes=10MB
 stdout_logfile_backups=3
